# evora

./: CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  EXECUTIVE_SUMMARY.md  FAQ.md  IMPLEMENTATION_STATUS.md  POISON_DETECTION_SUMMARY.md  POISON_MESSAGE_HANDLING.md  QUICK_REFERENCE.md  README.md  REDIS_STREAMS_API.md  REDIS_STREAMS_BROKER.md  REDIS_STREAMS_QUICKSTART.md  SCHEMA_GOVERNANCE.md  TROUBLESHOOTING.md  VISUAL_ARCHITECTURE.md
evora/: __init__.py  app.py  cli.py  core.py  errors.py  idempotency.py  idempotency_redis.py  runtime.py
evora/brokers/: base.py  memory.py  redis_streams.py
evora/idempotency/: __init__.py  base.py  redis_store.py
evora/observability/: __init__.py  telemetry.py  telemetry_otel.py  telemetry_simple.py
evora/schema/: compatibility.py  diff.py  extractor.py
examples/: README.md  memory_ex.py  redis_poison_demo.py  redis_streams_idemp.py
tests/: test_app.py  test_core.py  test_integration_redis.py  test_memory_broker.py  test_runtime.py  test_schema_cli.py  test_schema_diff.py  test_schema_extractor.py  test_telemetry.py
