[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "evora"
version = "0.2.0"
    description = "A reliability-first event processing runtime for Python microservices."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [{name="Tase Nikol", email="anikolaou.ph@gmail.com"}]

keywords = [
    "events",
    "microservices",
    "redis",
    "kafka",
    "rabbitmq",
    "dlq",
    "idempotency",
    "retry",
    "event-driven",
    "streams"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]


dependencies = [
    "pydantic>=2.0",
    "anyio>=4.0",
    "redis>=5.0",
]


[project.optional-dependencies]

# Observability
otel = [
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
]

# Development tools
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "ruff",
    "mypy",
]

# Documentation (future-proof)
docs = [
    "mkdocs",
    "mkdocs-material",
]

[project.scripts]
evora = "evora.cli:main"

[project.urls]
Repository = "https://github.com/your-org/evora"


[tool.setuptools.packages.find]
where = ["."]
include = ["evora*"]
exclude = ["tests*", "examples*", "docs*"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true